--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,17 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.1
 MarkupSafe==3.0.2
-mkl-fft==1.3.11
-mkl-random==1.2.8
-mkl-service==2.4.0
+mkl-fft
+mkl-random
+mkl-service
 numexpr==2.10.1
-numpy==2.0.2
-pandas==2.3.2
+numpy
+pandas
 pip==25.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 scikit-learn==1.6.1
-scipy==1.13.1
+scipy
 setuptools==72.1.0
 six==1.17.0
 threadpoolctl==3.5.0
