--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn==21.2.0
 blinker==1.9.0
 Bottleneck==1.4.2
 click==8.1.8
@@ -9,12 +10,12 @@ Jinja2==3.1.6
 joblib==1.5.1
 MarkupSafe==3.0.2
 numexpr==2.10.1
-numpy
-pandas
+numpy==1.26.4
+pandas==2.2.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 scikit-learn==1.6.1
-scipy
+scipy==1.13.1
 six==1.17.0
 threadpoolctl==3.5.0
 tzdata==2025.2
